# Fashion_Recommendation_model_demo

./: .env.example.  .gitignore  CLEAN_STRUCTURE_SUMMARY.md  CLIP_FIXES_SUMMARY.md  README.md  Term_project.ipynb  build_and_test.py  config.py  config_env.py  embeddings_mock.npy  index_paths.txt  index_paths_mock.txt  main.py  pyproject.toml  readme.md  requirements.txt  run_search.py  setup.sh  setup_config.py  term_project_clip.ipynb  test_basic.py  test_clip_simple.py  test_mock.py  test_small.py  validate_setup.py
.github/workflows/: ci.yml
api/: app.py  app_mock.py
backend/: README.md
backend-deploy/: .dockerignore  Dockerfile  config.py  deploy.sh  railway.json  requirements.txt
backend-deploy/api/: app.py  chains.py
backend-deploy/src/mywardrobe/: db.py  retrieval.py  utils.py
backend/development/: clip_working_example.py  main.py
backend/development/tests/: test_retrieval.py
frontend-deploy/ui/: app.py
scraper/: scrapy.cfg
scraper/shopstyle/: items.py  middlewares.py  pipelines.py  settings.py
scraper/shopstyle/spiders/: rss.py
src/: finetune.py  retrieval.py  utils.py
src/mywardrobe/: __init__.py  db.py  finetune.py  retrieval.py  retrieval_mock.py
tests/: test_retrieval.py
